iac-modules/extensions/qwen/v0.9-v1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-qwen2-5-7b
spec:
  parentRefs:
  - name: main-gateway
    namespace: kgateway-system
  hostnames:
  - "cluster1.eu-north-1.kube.nebius.hrishi.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /qwen
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: vllm-qwen2-5-7b
      port: 8000
